# filegram

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: build.yml  pages.yml  release.yaml  release.yml
filegram/: Cargo.toml  README.md
filegram-cli/: Cargo.toml  README.md
filegram-cli/src/: fig.rs  utils.rs
filegram-web/: Cargo.toml  README.md  index.html
filegram-web/css/: style.css
filegram-web/src/: decode.rs  encode.rs  lib.rs  main.rs  utils.rs
filegram-web/tests/: web.rs
filegram-web/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
filegram/src/: decode.rs  encode.rs  encryption.rs  lib.rs  padding.rs  utils.rs
filegram/tests/: encode_decode_test.rs
filegram/tests/data/: test.txt
src/lib/: decode.rs  encode.rs  encryption.rs  lib.rs  padding.rs  utils.rs
tests/: encode_decode_test.rs
