[package]
name = "filegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-padding = "0.3.3"
clap = { version = "4.4.8", features = ["derive"] }
image = "0.24.7"
imageproc = "0.23.0"
kdam = "0.5.0"

[lib]
name = "filegram"
path = "src/lib/lib.rs"

[[bin]]
name = "fig"
path = "src/bin/fig.rs"
