[package]
name = "filegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-padding = "0.3.3"
chacha20poly1305 = { version = "0.10.1", features = ["heapless"] }
clap = { version = "4.4.8", features = ["derive"] }
image = "0.24.7"
imageproc = "0.23.0"
kdam = "0.5.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

[lib]
name = "filegram"
path = "src/lib/lib.rs"

[[bin]]
name = "fig"
path = "src/bin/fig.rs"
