[package]
name = "filegram-cli"
version = "0.2.0"
authors = ["Paweł Kopel <pawel.kopel2@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filegram = { path = "../filegram" }
clap = { version = "4.5.23", features = ["derive"] }
serde_json = "1.0.135"

[[bin]]
name = "fig"
path = "src/fig.rs"
