[package]
name = "filegram-web"
version = "0.1.0"
authors = ["Paweł Kopel <pawel.kopel2@gmail.com>"]
edition = "2021"

[dependencies]
filegram = { path = "../filegram" }

js-sys = "0.3.68"
image = { version = "0.25.1", default-features = false }
web-sys = { version = "0.3.67", default-features = false }
wasm-bindgen = { version = "0.2.91", default-features = false }
yew = { version = "0.21.0", features = ["csr"] }
gloo-file = "0.3.0"
gloo-utils = { version = "0.2.0", default-features = false }
base64 = "0.22.1"
serde_json = "1.0.115"

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
getrandom = { version = "0.2.12", features = ["js"] }
