[package]
name = "filegram"
version = "0.2.0"
authors = ["Paweł Kopel <pawel.kopel2@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-padding = "0.3.3"
chacha20poly1305 = "0.10.1"
image = { version = "0.24.7", features = ["png"], default-features = false }
imageproc = { version = "0.23.0", default-features = false }
serde = { version = "1.0.193", features = [
    "std",
    "serde_derive",
], default-features = false }

[lib]
name = "filegram"
path = "src/lib.rs"
