[package]
name = "filegram"
version = "0.2.0"
authors = ["Paweł Kopel <pawel.kopel2@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-padding = { version = "0.3.3", features = ["std"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
image = { version = "0.24.9", features = ["png"], default-features = false }
imageproc = { version = "0.24.0", default-features = false }
serde = { version = "1.0.197", features = [
    "std",
    "serde_derive",
], default-features = false }

[lib]
name = "filegram"
path = "src/lib.rs"
